<resources>
    <string name="app_name">FindJob</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">755542711240730</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="quote_opportunities">Find new job opportunities</string>
    <string name="title_activity_sing_up">Sing Up</string>
    <string name="name">Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="new_password">New Password:</string>
    <string name="title_activity_login">Sign in</string>
    <string name="password">Password</string>

</resources>
