<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_fj_720x1280"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/FindJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="24pt" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/FindJob"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="200dp"
        android:text="@string/quote_opportunities"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp"

        />

    <Button
        android:id="@+id/login"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="logInClickHandler"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/join"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/login"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="singUpClickHandler"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

</RelativeLayout>
