<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.akomsoft.findjob.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/txt_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/tf_name"
        android:layout_alignBaseline="@id/txt_name"
        android:layout_toEndOf="@id/txt_name"
        android:layout_toRightOf="@id/txt_name"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:id="@+id/txt_last_name"
        android:layout_below="@id/txt_name"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/tf_last_name"
        android:layout_alignBaseline="@id/txt_last_name"
        android:layout_toRightOf="@id/txt_last_name"
        android:layout_toEndOf="@id/txt_last_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/txt_email"
        android:layout_below="@id/txt_last_name"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/tf_email"
        android:layout_alignBaseline="@id/txt_email"
        android:layout_toRightOf="@id/txt_email"
        android:layout_toEndOf="@id/txt_email"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:id="@+id/txt_new_password"
        android:layout_below="@id/txt_email"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword|textPassword"
        android:ems="10"
        android:id="@+id/tf_new_password"
        android:layout_alignBaseline="@id/txt_new_password"
        android:layout_toRightOf="@id/txt_new_password"
        android:layout_toEndOf="@id/txt_new_password"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/bt_sign_up"
        android:layout_below="@+id/txt_new_password"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

</RelativeLayout>
